--- a/Level1/Unit1/LifeLessons/index.html
+++ b/Level1/Unit1/LifeLessons/index.html
@@ -316,37 +316,47 @@
     img.src = '../../../../imagens/hannah_logo.png';
 
     img.onload = () => {
+        // Adiciona logo, campos de Name e Date
         doc.addImage(img, 'PNG', 10, 10, 20, 20);
         doc.setFontSize(12);
         doc.text("Name:__________________________ Date:______________", 40, 20);
+        
+        // Título da atividade
         doc.setFontSize(16);
         doc.text("Life Lessons from the Bible", 10, 40);
-        doc.setFontSize(12);
 
-        let y = 50; // Start position for questions
-        const lineHeight = 10; // Height for each line of text
+        // Adiciona um quadro com as opções de respostas no topo
+        doc.setFontSize(12);
+        let answerOptions = questions.map(q => q.answer).join(", ");
+        let splitOptions = doc.splitTextToSize("Answer Options: " + answerOptions, 180);
+        doc.text(splitOptions, 10, 50);
+
+        // Definições de layout e altura inicial
+        let y = 60 + (splitOptions.length * 10); // Posiciona abaixo das opções de respostas
+        const lineHeight = 10;
         const pageHeight = doc.internal.pageSize.height;
 
+        // Adiciona perguntas e respostas com quebras de linha e página
         questions.forEach((q, i) => {
             let questionText = `${i + 1}. ${q.question}`;
             let answerText = userAnswers[i] || "________";
 
-            // Check if question text fits in the remaining space
-            let splitQuestion = doc.splitTextToSize(questionText, 180);
-            let splitAnswer = doc.splitTextToSize(answerText, 180);
-
-            // If adding this question exceeds the page height, add a new page
-            if (y + (splitQuestion.length + splitAnswer.length) * lineHeight > pageHeight - 20) {
+            // Divide o texto para caber no espaço disponível
+            let splitQuestion = doc.splitTextToSize(questionText, 150);
+            
+            // Verifica se há espaço suficiente na página para a pergunta e resposta
+            if (y + (splitQuestion.length + 1) * lineHeight > pageHeight - 20) {
                 doc.addPage();
-                y = 20; // Reset y position for new page
-                doc.addImage(img, 'PNG', 10, 10, 20, 20); // Add logo on new page
+                y = 20;
+                doc.addImage(img, 'PNG', 10, 10, 20, 20); // Adiciona logo na nova página
                 doc.text("Name:__________________________ Date:______________", 40, 20);
-                y += 20; // Add spacing after header
+                y += 30; // Espaçamento para o conteúdo
             }
 
+            // Adiciona pergunta e resposta no PDF
             doc.text(splitQuestion, 10, y);
-            doc.text(splitAnswer, 120, y); // Place answer on the right side
-            y += (splitQuestion.length + splitAnswer.length) * lineHeight; // Update y position
+            doc.text(answerText, 160, y); // Posição da resposta à direita
+            y += (splitQuestion.length + 1) * lineHeight;
         });
 
         doc.save("activity.pdf");
