--- a/Level1/Unit1/LifeLessons/index.html
+++ b/Level1/Unit1/LifeLessons/index.html
@@ -345,7 +345,7 @@
             let splitQuestion = doc.splitTextToSize(questionText, 150);
             
             // Verifica se há espaço suficiente na página para a pergunta e resposta
-            if (y + (splitQuestion.length + 1) * lineHeight > pageHeight - 20) {
+            if (y + (splitQuestion.length) * lineHeight > pageHeight - 20) {
                 doc.addPage();
                 y = 20;
                 doc.addImage(img, 'PNG', 10, 10, 20, 20); // Adiciona logo na nova página
@@ -355,8 +355,8 @@
 
             // Adiciona pergunta e resposta no PDF
             doc.text(splitQuestion, 10, y);
-            doc.text(answerText, 160, y); // Posição da resposta à direita
-            y += (splitQuestion.length + 1) * lineHeight;
+            doc.text(answerText, 160, y); // Posição da resposta à direita (ajuste para evitar o espaço extra)
+            y += (splitQuestion.length) * lineHeight;
         });
 
         doc.save("activity.pdf");
