--- a/Level1/Unit1/LifeLessons/index.html
+++ b/Level1/Unit1/LifeLessons/index.html
@@ -309,7 +309,7 @@
         firebase.database().ref(path).set(true);
     }
 
-    function generatePDF() {
+   function generatePDF() {
     const { jsPDF } = window.jspdf;
     const doc = new jsPDF();
     const img = new Image();
@@ -353,9 +353,9 @@
                 y += 30; // Espaçamento para o conteúdo
             }
 
-            // Adiciona pergunta e resposta no PDF
+            // Adiciona pergunta e resposta no PDF, alinhando a resposta na mesma linha da pergunta
             doc.text(splitQuestion, 10, y);
-            doc.text(answerText, 160, y); // Posição da resposta à direita (ajuste para evitar o espaço extra)
+            doc.text(answerText, 150, y); // Posição da resposta à direita na mesma linha
             y += (splitQuestion.length) * lineHeight;
         });
 
