--- a/Level1/Unit1/LifeLessons/index.html
+++ b/Level1/Unit1/LifeLessons/index.html
@@ -309,7 +309,7 @@
         firebase.database().ref(path).set(true);
     }
 
-   function generatePDF() {
+ function generatePDF() {
     const { jsPDF } = window.jspdf;
     const doc = new jsPDF();
     const img = new Image();
@@ -338,12 +338,10 @@
 
         // Adiciona perguntas e respostas com quebras de linha e página
         questions.forEach((q, i) => {
-            let questionText = `${i + 1}. ${q.question}`;
-            let answerText = userAnswers[i] || "________";
+            // Define o texto da pergunta, ajustando para uma largura menor
+            let questionText = `${i + 1}. ${q.question} ______`;
+            let splitQuestion = doc.splitTextToSize(questionText, 120); // Ajusta largura para deixar espaço para resposta
 
-            // Divide o texto para caber no espaço disponível
-            let splitQuestion = doc.splitTextToSize(questionText, 150);
-            
             // Verifica se há espaço suficiente na página para a pergunta e resposta
             if (y + (splitQuestion.length) * lineHeight > pageHeight - 20) {
                 doc.addPage();
@@ -353,9 +351,13 @@
                 y += 30; // Espaçamento para o conteúdo
             }
 
-            // Adiciona pergunta e resposta no PDF, alinhando a resposta na mesma linha da pergunta
+            // Adiciona a pergunta
             doc.text(splitQuestion, 10, y);
-            doc.text(answerText, 150, y); // Posição da resposta à direita na mesma linha
+
+            // Adiciona a resposta alinhada à direita, no final da linha da pergunta
+            let answerText = userAnswers[i] || "________";
+            doc.text(answerText, 150, y); // Posição da resposta à direita
+
             y += (splitQuestion.length) * lineHeight;
         });
 
