--- a/Level1/Unit1/LifeLessons/index.html
+++ b/Level1/Unit1/LifeLessons/index.html
@@ -309,7 +309,7 @@
         firebase.database().ref(path).set(true);
     }
 
- function generatePDF() {
+function generatePDF() {
     const { jsPDF } = window.jspdf;
     const doc = new jsPDF();
     const img = new Image();
@@ -351,14 +351,15 @@
                 y += 30; // Espaçamento para o conteúdo
             }
 
-            // Adiciona a pergunta e garante que a linha de resposta fique logo abaixo da última linha da pergunta
+            // Adiciona a pergunta
             doc.text(splitQuestion, 10, y);
-            y += splitQuestion.length * lineHeight;
             
-            // Adiciona a linha de resposta abaixo da pergunta
+            // Adiciona a linha de resposta alinhada ao final da última linha da pergunta
             let answerText = userAnswers[i] || "________";
-            doc.text(answerText, 10, y); // Posiciona a resposta à esquerda na nova linha
-            y += lineHeight; // Move para a próxima linha para a próxima pergunta
+            doc.text(answerText, 10 + splitQuestion[splitQuestion.length - 1].length * 2.5, y + lineHeight); // Ajusta a posição da resposta
+
+            // Atualiza y apenas para a próxima pergunta
+            y += (splitQuestion.length + 1) * lineHeight;
         });
 
         doc.save("activity.pdf");
