--- a/Level1/Unit1/LifeLessons/index.html
+++ b/Level1/Unit1/LifeLessons/index.html
@@ -336,14 +336,14 @@ function generatePDF() {
         const lineHeight = 10;
         const pageHeight = doc.internal.pageSize.height;
 
-        // Adiciona perguntas e respostas com quebras de linha e página
+        // Adiciona perguntas e respostas sem linhas extras
         questions.forEach((q, i) => {
             // Define o texto da pergunta, dividindo-o automaticamente para caber na largura permitida
-            let questionText = `${i + 1}. ${q.question}`;
-            let splitQuestion = doc.splitTextToSize(questionText, 150); // Divide o texto da pergunta para caber no espaço
+            let questionText = `${i + 1}. ${q.question} ______`;
+            let splitQuestion = doc.splitTextToSize(questionText, 150); // Ajusta largura para deixar espaço para resposta
 
             // Verifica se há espaço suficiente na página para a pergunta e resposta
-            if (y + (splitQuestion.length + 1) * lineHeight > pageHeight - 20) {
+            if (y + (splitQuestion.length) * lineHeight > pageHeight - 20) {
                 doc.addPage();
                 y = 20;
                 doc.addImage(img, 'PNG', 10, 10, 20, 20); // Adiciona logo na nova página
@@ -351,15 +351,9 @@ function generatePDF() {
                 y += 30; // Espaçamento para o conteúdo
             }
 
-            // Adiciona a pergunta
+            // Adiciona a pergunta no PDF
             doc.text(splitQuestion, 10, y);
-            
-            // Adiciona a linha de resposta alinhada ao final da última linha da pergunta
-            let answerText = userAnswers[i] || "________";
-            doc.text(answerText, 10 + splitQuestion[splitQuestion.length - 1].length * 2.5, y + lineHeight); // Ajusta a posição da resposta
-
-            // Atualiza y apenas para a próxima pergunta
-            y += (splitQuestion.length + 1) * lineHeight;
+            y += splitQuestion.length * lineHeight; // Atualiza y para a próxima pergunta, sem adicionar linhas extras
         });
 
         doc.save("activity.pdf");
