--- a/Level1/Unit1/LifeLessons/index.html
+++ b/Level1/Unit1/LifeLessons/index.html
@@ -336,13 +336,13 @@ function generatePDF() {
         const lineHeight = 10;
         const pageHeight = doc.internal.pageSize.height;
 
-        // Adiciona perguntas e respostas sem linhas extras
+        // Adiciona perguntas sem qualquer linha de resposta adicional
         questions.forEach((q, i) => {
             // Define o texto da pergunta, dividindo-o automaticamente para caber na largura permitida
-            let questionText = `${i + 1}. ${q.question} ______`;
-            let splitQuestion = doc.splitTextToSize(questionText, 150); // Ajusta largura para deixar espaço para resposta
+            let questionText = `${i + 1}. ${q.question}`;
+            let splitQuestion = doc.splitTextToSize(questionText, 180); // Ajusta largura para caber no espaço
 
-            // Verifica se há espaço suficiente na página para a pergunta e resposta
+            // Verifica se há espaço suficiente na página para a pergunta
             if (y + (splitQuestion.length) * lineHeight > pageHeight - 20) {
                 doc.addPage();
                 y = 20;
@@ -351,9 +351,9 @@ function generatePDF() {
                 y += 30; // Espaçamento para o conteúdo
             }
 
-            // Adiciona a pergunta no PDF
+            // Adiciona a pergunta no PDF sem linhas adicionais de resposta
             doc.text(splitQuestion, 10, y);
-            y += splitQuestion.length * lineHeight; // Atualiza y para a próxima pergunta, sem adicionar linhas extras
+            y += splitQuestion.length * lineHeight; // Atualiza y para a próxima pergunta
         });
 
         doc.save("activity.pdf");
