--- a/Level1/Unit1/LifeLessons/index.html
+++ b/Level1/Unit1/LifeLessons/index.html
@@ -334,6 +334,7 @@ function generatePDF() {
         // Definições de layout e altura inicial
         let y = 60 + (splitOptions.length * 10); // Posiciona abaixo das opções de respostas
         const lineHeight = 10;
+        const questionSpacing = 12; // Espaçamento consistente entre perguntas
         const pageHeight = doc.internal.pageSize.height;
 
         // Adiciona perguntas sem qualquer linha de resposta adicional
@@ -353,7 +354,7 @@ function generatePDF() {
 
             // Adiciona a pergunta no PDF sem linhas adicionais de resposta
             doc.text(splitQuestion, 10, y);
-            y += splitQuestion.length * lineHeight; // Atualiza y para a próxima pergunta
+            y += splitQuestion.length * lineHeight + questionSpacing; // Atualiza y com espaçamento consistente
         });
 
         doc.save("activity.pdf");
