--- a/Level1/Unit1/LifeLessons/index.html
+++ b/Level1/Unit1/LifeLessons/index.html
@@ -266,31 +266,35 @@
         }
     }
 
-    function checkAnswers() {
-        let allCorrect = true;
-        
-        questions.forEach((q, index) => {
-            if (userAnswers[index] !== q.answer) {
-                allCorrect = false;
-            }
-        });
-
-        if (allCorrect) {
-            showModal("Congratulations! You have completed the phase.");
-            updateProgressInDatabase();
+  function checkAnswers() {
+    let allCorrect = true;
+    
+    questions.forEach((q, index) => {
+        if (userAnswers[index] === q.answer) {
+            // Adiciona a classe 'correct-answer' se a resposta estiver correta
+            const answerArea = document.getElementById('answer-area');
+            answerArea.classList.add('correct-answer');
         } else {
-            showModal("Some answers were incorrect. Try again!");
-            currentQuestionIndex = 0;
-            loadQuestion();
-            resetIncorrectAnswers();
+            allCorrect = false;
         }
+    });
+
+    if (allCorrect) {
+        showModal("Congratulations! You have completed the phase.");
+        updateProgressInDatabase();
+    } else {
+        showModal("Some answers were incorrect. Try again!");
+        currentQuestionIndex = 0;
+        loadQuestion();
+        resetIncorrectAnswers();
     }
+}
 
     function resetIncorrectAnswers() {
-        document.getElementById('words-container').innerHTML = '';
-        document.getElementById('answer-area').classList.remove('correct-answer');
-        initializeActivity();
-    }
+    document.getElementById('words-container').innerHTML = '';
+    document.getElementById('answer-area').classList.remove('correct-answer');
+    initializeActivity();
+}
 
     function showModal(message) {
         document.getElementById("modal-message").textContent = message;
