--- a/Level1/Unit1/LifeLessons/index.html
+++ b/Level1/Unit1/LifeLessons/index.html
@@ -268,17 +268,23 @@
 
   function checkAnswers() {
     let allCorrect = true;
-    
+
     questions.forEach((q, index) => {
-        if (userAnswers[index] === q.answer) {
-            // Adiciona a classe 'correct-answer' se a resposta estiver correta
-            const answerArea = document.getElementById('answer-area');
-            answerArea.classList.add('correct-answer');
-        } else {
+        // Checa se a resposta armazenada pelo usuário está correta
+        if (userAnswers[index] !== q.answer) {
             allCorrect = false;
         }
     });
 
+    // Verifica a resposta atual e aplica/remover a classe
+    const currentAnswerArea = document.getElementById('answer-area');
+    if (userAnswers[currentQuestionIndex] === questions[currentQuestionIndex].answer) {
+        currentAnswerArea.classList.add('correct-answer');
+    } else {
+        currentAnswerArea.classList.remove('correct-answer');
+    }
+
+    // Mostra o modal de conclusão
     if (allCorrect) {
         showModal("Congratulations! You have completed the phase.");
         updateProgressInDatabase();
