--- a/Level1/Unit1/LifeLessons/index.html
+++ b/Level1/Unit1/LifeLessons/index.html
@@ -218,7 +218,9 @@
     if (answerArea.textContent) {
         // Coloca a resposta atual de volta na área de opções
         const currentAnswer = answerArea.textContent;
-        wordsContainer.appendChild(createClickableWord(currentAnswer));
+       if (!document.getElementById(`word-${currentAnswer}`)) {
+    wordsContainer.appendChild(createClickableWord(currentAnswer));
+}
     }
 
     // Atualiza o campo de resposta com a nova escolha
@@ -244,15 +246,23 @@
     }
 }
 
-    function loadQuestion() {
-        const questionObj = questions[currentQuestionIndex];
-        document.getElementById('question-text').textContent = questionObj.question;
-        const answerArea = document.getElementById('answer-area');
-        answerArea.textContent = '';
-        if (userAnswers[currentQuestionIndex]) {
-            answerArea.textContent = userAnswers[currentQuestionIndex];
+   function loadQuestion() {
+    const questionObj = questions[currentQuestionIndex];
+    document.getElementById('question-text').textContent = questionObj.question;
+    const answerArea = document.getElementById('answer-area');
+    answerArea.textContent = '';
+    
+    if (userAnswers[currentQuestionIndex]) {
+        answerArea.textContent = userAnswers[currentQuestionIndex];
+        if (userAnswers[currentQuestionIndex] === questionObj.answer) {
+            answerArea.style.border = "2px solid green"; // Borda verde para resposta correta
+        } else {
+            answerArea.style.border = "2px dashed #333"; // Borda padrão
         }
+    } else {
+        answerArea.style.border = "2px dashed #333"; // Borda padrão
     }
+}
 
     function nextQuestion() {
         if (currentQuestionIndex < questions.length - 1) {
