--- a/Level1/Unit1/LifeLessons/index.html
+++ b/Level1/Unit1/LifeLessons/index.html
@@ -210,7 +210,7 @@
         document.getElementById('words-container').appendChild(wordElem);
     }
 
-   function selectAnswer(wordElem, word) {
+  function selectAnswer(wordElem, word) {
     const answerArea = document.getElementById('answer-area');
     const wordsContainer = document.getElementById('words-container');
 
@@ -218,10 +218,22 @@
     if (answerArea.textContent) {
         // Coloca a resposta atual de volta na área de opções
         const currentAnswer = answerArea.textContent;
-       if (!document.getElementById(`word-${currentAnswer}`)) {
-    wordsContainer.appendChild(createClickableWord(currentAnswer));
-}
+
+        // Remova o elemento de resposta atual da área de resposta
+        answerArea.textContent = '';
+
+        // Adiciona a resposta anterior de volta ao container de opções, se não estiver lá
+        if (!document.getElementById(`word-${currentAnswer}`)) {
+            const previousAnswerElem = createClickableWord(currentAnswer);
+            wordsContainer.appendChild(previousAnswerElem);
+        }
     }
+
+    // Atualiza o campo de resposta com a nova escolha
+    answerArea.textContent = word;
+    userAnswers[currentQuestionIndex] = word;
+    wordElem.remove(); // Remove a nova escolha da área de opções
+}
 
     // Atualiza o campo de resposta com a nova escolha
     answerArea.textContent = word;
