--- a/Level1/Unit1/LifeLessons/index.html
+++ b/Level1/Unit1/LifeLessons/index.html
@@ -211,26 +211,23 @@ function createClickableWord(word) {
     return wordElem;
 }
 
-  function selectAnswer(wordElem, word) {
+ function selectAnswer(wordElem, word) {
     const answerArea = document.getElementById('answer-area');
     const wordsContainer = document.getElementById('words-container');
 
     // Verifica se já há uma resposta no campo de resposta
     if (answerArea.textContent) {
-        // Obtém a resposta atual do campo de resposta
         const currentAnswer = answerArea.textContent;
 
         // Limpa o campo de resposta
         answerArea.textContent = '';
 
-        // Adiciona a resposta anterior de volta ao container de opções, evitando duplicações
-        if (!document.getElementById(`word-${currentAnswer}`)) {
-            const previousAnswerElem = document.createElement('div');
-            previousAnswerElem.classList.add('clickable-word');
-            previousAnswerElem.textContent = currentAnswer;
-            previousAnswerElem.id = `word-${currentAnswer}`;
-            previousAnswerElem.onclick = () => selectAnswer(previousAnswerElem, currentAnswer);
-            wordsContainer.appendChild(previousAnswerElem);
+        // Adiciona a resposta anterior de volta ao container de opções, caso seja incorreta
+        if (userAnswers[currentQuestionIndex] !== questions[currentQuestionIndex].answer) {
+            if (!document.getElementById(`word-${currentAnswer}`)) {
+                const previousAnswerElem = createClickableWord(currentAnswer);
+                wordsContainer.appendChild(previousAnswerElem);
+            }
         }
     }
 
@@ -297,24 +294,24 @@ function removeAnswer() {
         }
     }
 
-   function checkAnswers() {
+  function checkAnswers() {
     let allCorrect = true;
     const wordsContainer = document.getElementById('words-container');
-    wordsContainer.innerHTML = ""; // Limpa a área de opções para reconstruir apenas as incorretas.
+    wordsContainer.innerHTML = ""; // Limpa a área de opções para reconstruir apenas as incorretas
 
     questions.forEach((q, index) => {
-        const answerArea = document.getElementById('answer-area');
-        
-        // Se a resposta está correta, mantém a borda verde e não a adiciona de volta.
+        // Verifica a resposta para cada pergunta
         if (userAnswers[index] === q.answer) {
-            answerArea.style.border = "2px solid green"; // Borda verde para resposta correta
+            // Mantém a borda verde para respostas corretas e não adiciona de volta
+            if (index === currentQuestionIndex) {
+                document.getElementById('answer-area').style.border = "2px solid green";
+            }
         } else {
-            // Se a resposta está incorreta, redefine borda e adiciona de volta ao wordsContainer
+            // Adiciona respostas incorretas de volta à área de opções
             allCorrect = false;
-            answerArea.style.border = "2px dashed #333"; // Borda padrão para incorretas
             if (!document.getElementById(`word-${q.answer}`)) {
                 const wordElem = createClickableWord(q.answer);
-                wordsContainer.appendChild(wordElem); // Recria elemento de opção para respostas incorretas
+                wordsContainer.appendChild(wordElem);
             }
         }
     });
